--- a/fly.toml
+++ b/fly.toml
@@ -20,3 +20,14 @@ primary_region = 'arn'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "30s"
+  method = "GET"
+  timeout = "5s"
+  path = "/"
+
+[deploy]
+  strategy = "canary"
+
